Update index.html for li

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -6,18 +6,22 @@
 </head>
 <body>
 		<!-- Your code goes here-->
-		Make a slider of virtual reality headsets and set up the experiment.  
-		This approach is using Unity3D, a popular game engine for VR development.  
-		1. Create a new Unity project or open an existing one and then set up your VR scene with the necessary environment and objects.  
-		2. Add a 3D object such as a cube or cylinder to represent the slider handle and position the slider object appropriately within your scene.  
-		3. Attach a script to the slider object to handle user interaction.  
-		4. Use input from the VR controllers (e.g., Oculus Touch controllers) to detect when the user grabs and moves the slider.  
-		5. Update the position of the slider handle based on the user's input.  
-		6. Define the minimum and maximum values that the slider can represent.  
-		7. Check the VR controllers to enhance the user experience, and also check the current value of the slider.  
-		8. Test the slider interface in VR to ensure that it works as intended. Modify if necessary.  
-		9. (Remember to attach this script to the slider object in your Unity scene and configure the script's properties as required. Test the slider interface in VR to ensure it behaves as expected and refine it as needed for optimal usability).
+		<p>Make a slider of virtual reality headsets and set up the experiment.  </p>
 		
+		<ol>This approach is using Unity3D, a popular game engine for VR development.   
+		
+		<li>Create a new Unity project or open an existing one and then set up your VR scene with the necessary environment and objects.</li> 
+		<li>Add a 3D object such as a cube or cylinder to represent the slider handle and position the slider object appropriately within your scene.  </li>
+		<li>Attach a script to the slider object to handle user interaction.  </li>
+		<li>Use input from the VR controllers (e.g., Oculus Touch controllers) to detect when the user grabs and moves the slider.</li> 
+		<li>Update the position of the slider handle based on the user's input.  </li>
+		<li>Define the minimum and maximum values that the slider can represent.  </li>
+		<li>Check the VR controllers to enhance the user experience, and also check the current value of the slider.  </li>
+		<li>Test the slider interface in VR to ensure that it works as intended. Modify if necessary.  </li>
+		<br>
+		(Remember to attach this script to the slider object in your Unity scene and configure the script's properties as required. Test the slider interface in VR to ensure it behaves as expected and refine it as needed for optimal usability).
+		
+		</ol>
 
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
